# 2d-Smoothing

./: CMakeLists.txt  README.md  conv2d.cuh  example.cu  interp2.cuh
